vlib/v/checker/tests/struct_field_option_err.out
vlib/v/checker/tests/struct_field_option_err.vv:3:6: error: struct field does not support storing Result
    1 | struct Foo {
    2 | mut:
    3 |     foo !int
      |         ^
    4 |     bar ?int = 1
    5 |     baz int  = 1
vlib/v/checker/tests/struct_field_option_err.vv:12:12: error: `+` cannot be used with `?int`
   10 | 
   11 |     _ = f.bar
   12 |     _ = f.bar + 1
      |               ^
   13 | 
   14 |     _ = f.bar!
vlib/v/checker/tests/struct_field_option_err.vv:14:11: error: to propagate a Result, the call must also return a Result type
   12 |     _ = f.bar + 1
   13 | 
   14 |     _ = f.bar!
      |              ^
   15 | 
   16 |     _ = f.bar or { _ = 1 }
vlib/v/checker/tests/struct_field_option_err.vv:16:19: error: last statement in the `or {}` block should be an expression of type `int` or exit parent scope
   14 |     _ = f.bar!
   15 | 
   16 |     _ = f.bar or { _ = 1 }
      |                      ^
   17 | 
   18 |     _ = f.baz?
vlib/v/checker/tests/struct_field_option_err.vv:18:11: error: unexpected `?`, the field `baz` is not an Option
   16 |     _ = f.bar or { _ = 1 }
   17 | 
   18 |     _ = f.baz?
      |              ^
   19 | }
